# rust_imaging

./: .gitignore  README.md  config.yaml
ccdi-common/: Cargo.toml
ccdi-common/src/: autoexp.rs  lib.rs
ccdi-common/src/file/: mod.rs
ccdi-common/src/image/: lookup.rs  scale_fast.rs
ccdi-common/src/messages/: client.rs  gui_config.rs  process.rs  state.rs  storage.rs
ccdi-image/: Cargo.toml
ccdi-image/src/: lib.rs  plot.rs  raw_to_bmp.rs  stats.rs
ccdi-imager-asicam/: Cargo.toml
ccdi-imager-asicam/src/: lib.rs
ccdi-imager-demo/: Cargo.toml
ccdi-imager-demo/src/: lib.rs
ccdi-imager-fli/: Cargo.toml
ccdi-imager-fli/src/: lib.rs
ccdi-imager-interface/: Cargo.toml
ccdi-imager-interface/src/: lib.rs
ccdi-logic/: Cargo.toml
ccdi-logic/src/: lib.rs  state.rs  thread.rs
ccdi-logic/src/camera/: connected.rs  exposure.rs  mod.rs
ccdi-logic/src/config/: mod.rs
ccdi-logic/src/convert/: mod.rs
ccdi-logic/src/io/: led_output.rs  mod.rs
ccdi-logic/src/storage/: mod.rs  save.rs
ccdi-test-gpio/src/: main.rs
ccdi-tool-timestamps/: Cargo.toml
ccdi-tool-timestamps/src/: main.rs
ccdi-web-client/: Cargo.toml  index.scss
ccdi-web-client/src/: connection.rs  main.rs
ccdi-web-client/src/components/: camera.rs  shooting_details.rs  status_bar.rs  text_input.rs
ccdi-web-client/src/selectors/: autoexp.rs  bool.rs  composition.rs  floatin.rs  intin.rs  mod.rs  picture.rs  rawhtml.rs  shooting.rs  usize.rs
ccdi-web-service/: Cargo.toml  copy-client-binaries.sh
ccdi-web-service/src/: bridge.rs  config.rs  logger.rs  main.rs  static_files.rs  websocket.rs
ccdi-web-service/src/static/: ccdi-web-client.js  ccdi-web-client_bg.wasm  index.css  index.html
