[package]
name = "ccdi-imager-asicam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cameraunit = "1.0.3"
cameraunit_asi = "2.1.0"
ccdi-imager-interface = { path = "../ccdi-imager-interface" }
ccdi-common = { path = "../ccdi-common" }
