[package]
name = "ccdi-imager-asicam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cameraunit = "1.0.3"
cameraunit_asi = "2.1.2"
ccdi-imager-interface = { path = "../ccdi-imager-interface" }
ccdi-common = { path = "../ccdi-common" }
log = "0.4.20"
once_cell = "1.18.0"
