[package]
name = "ccdi-imager-fli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cameraunit_fli = "0.0"
ccdi-imager-interface = { path = "../ccdi-imager-interface" }
ccdi-common = { path = "../ccdi-common" }
log = "0.4.20"
once_cell = "1.18.0"
image = "0.25"
