[package]
name = "ccdi-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
directories = "5.0.1"
serde = { version = "1", features = ["rc"] }
serde_json = "1"
serde_derive = "1"
serde_yaml = "0.9.22"
fitsio = "0.21.2"
cameraunit = "5.1"
simple-expand-tilde = "0.1.4"
image = "0.25"

ccdi-common = { path = "../ccdi-common" }
ccdi-imager-interface = { path = "../ccdi-imager-interface" }
ccdi-imager-demo = { path = "../ccdi-imager-demo" }
ccdi-imager-fli = { path = "../ccdi-imager-fli" }

[target.'cfg(not(all(target_os = "macos", target_arch = "aarch64")))'.dependencies]
ccdi-imager-asicam = { path = "../ccdi-imager-asicam" }

[dev-dependencies]
indoc = "2.0.3"
