[package]
name = "ccdi-web-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
yew = { version = "0.20.0", features = ["csr"] }
yew-websocket = "=1.0.0"
gloo = "0.9.0"
gloo-timers = "0.2.6"
base64 = "0.21.0"
web-sys = "*"
wasm-bindgen = "*"
getrandom = { version = "0.2", features = ["js"] }

ccdi-common = { path = "../ccdi-common" }
ccdi-imager-interface = { path = "../ccdi-imager-interface" }
once_cell = "1.18.0"
log = "0.4.21"

gloo-utils = "0.2"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
