[package]
name = "ccdi-web-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"]}
tokio-stream = "0.1"
warp = "0.3"
futures = "0.3"
log = "0.4"
bus = "2.4"
uuid = "1.3"
serde_json = "1"
argh = "0.1"
simplelog = "0.12"

ccdi-common = { path = "../ccdi-common" }
ccdi-logic = { path = "../ccdi-logic" }

[build-dependencies]
chrono = "0.4"
